--- a/RecipeHelper/package.json
+++ b/RecipeHelper/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "fsevents": "^2.3.2",
     "http-errors": "^1.6.3",
     "mongoose": "^5.13.12",
     "morgan": "^1.10.0",
