--- a/RecipeHelper/angular.json
+++ b/RecipeHelper/angular.json
@@ -28,7 +28,8 @@
               },
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/annyang.min.js"]
           },
           "configurations": {
             "production": {
